Se actualizan los archivos

--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="C:\Users\Lenovo\Documents\SoyHenry\FT-M0\00-Intro-GIT-HTML-CSS\03. HTML\homework\estilos.css">
 </head>
 <body>
-<div id="divClass">
+<div id="divClassUno">
 	<center><h1 style="color: red">Andres Felipe</h1></center>
 	<h3>Henry</h3>
 	<h4>Tarea de HTML / CSS</h4>
@@ -16,7 +16,6 @@
 	<a href="https://pideenlinea.elcorral.com/?gclid=CjwKCAjw_JuGBhBkEiwA1xmbRbk7yKN4TcQGF8ZHaqNzHJUkKill7TC4FLNE7xuwOEHyK0xAB6d8VRoCFr4QAvD_BwE#no-back-button" target="blank">El Corral</a>
 </div>
 <div id="thirdDiv">
-	//Lista desordenada
 	<ul>
 		<li>Colombia</li>
 		<li>Mexico</li>
